--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+ail<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -29,7 +29,7 @@
     <EditText
         android:id="@+id/edit_usuario"
         android:inputType="text"
-        android:hint="por favor introduce nombre"
+        android:hint="por favor introduce email"
         android:drawableLeft="@drawable/icon_ropa"
         android:drawablePadding="10dp"
         android:layout_width="0dp"
