--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -29,6 +29,7 @@
         android:id="@+id/bienvenido"
         android:text="Bienvenido"
         android:textSize="50dp"
+        android:textColor="@color/black"
         android:textStyle="italic"
         android:layout_marginTop="30dp"
         android:textAlignment="center"
@@ -44,6 +45,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Añadir una nueva prenda"
+        android:textColor="@color/white"
         android:backgroundTint="@color/verde"
         app:layout_constraintEnd_toEndOf="@+id/bienvenido"
         app:layout_constraintStart_toStartOf="@+id/bienvenido"
@@ -55,6 +57,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Accede a tu armario"
+        android:textColor="@color/white"
         android:backgroundTint="@color/verde"
         app:layout_constraintEnd_toEndOf="@+id/bienvenido"
         app:layout_constraintStart_toStartOf="@+id/bienvenido"
@@ -64,6 +67,7 @@
         android:layout_marginTop="30dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:backgroundTint="@color/verde"
         android:text="Nuevo outfit"
         app:layout_constraintEnd_toEndOf="@+id/bienvenido"
@@ -75,6 +79,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Cerrar sesión"
+        android:textColor="@color/white"
         android:backgroundTint="@color/naranja"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/outfit"
