--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -9,6 +9,7 @@
 
     <TextView
         android:id="@+id/texto"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -21,6 +22,7 @@
         android:id="@+id/spinner_tipo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:layout_marginTop="20dp"
         android:entries="@array/tipo_spinner"
         app:layout_constraintEnd_toEndOf="parent"
