--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -32,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:entries="@array/superior_spinner"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
@@ -51,6 +52,7 @@
         android:layout_height="wrap_content"
         android:text="Fijar"
         android:backgroundTint="@color/verde"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/imagen1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imagen1"
@@ -68,6 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:entries="@array/inferior_spinner"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="@+id/spinner_superior"
         app:layout_constraintStart_toStartOf="@+id/spinner_superior"
@@ -86,6 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Fijar"
+        android:textColor="@color/white"
         android:backgroundTint="@color/verde"
         app:layout_constraintBottom_toBottomOf="@+id/imagen2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -105,6 +109,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:entries="@array/calzado_spinner"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="@+id/spinner_inferior"
         app:layout_constraintStart_toStartOf="@+id/spinner_inferior"
@@ -124,6 +129,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Fijar"
+        android:textColor="@color/white"
         android:backgroundTint="@color/verde"
         app:layout_constraintBottom_toBottomOf="@+id/imagen3"
         app:layout_constraintEnd_toEndOf="parent"
