--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,4 +1,4 @@
-ail<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -30,7 +30,9 @@ ail<?xml version="1.0" encoding="utf-8"?>
         android:id="@+id/edit_usuario"
         android:inputType="text"
         android:hint="Por favor introduce email"
+        android:textColorHint="@color/black"
         android:drawableLeft="@drawable/icon_ropa"
+        android:textColor="@color/black"
         android:drawablePadding="10dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -43,6 +45,8 @@ ail<?xml version="1.0" encoding="utf-8"?>
         android:drawablePadding="20dp"
         android:hint="Por favor introduce pass"
         android:inputType="textPassword"
+        android:textColorHint="@color/black"
+        android:textColor="@color/black"
         android:layout_marginTop="20dp"
         android:id="@+id/edit_pass"
         android:layout_width="0dp"
@@ -55,6 +59,7 @@ ail<?xml version="1.0" encoding="utf-8"?>
         android:id="@+id/boton_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:backgroundTint="@color/verde"
         android:layout_marginTop="40dp"
         android:text="Iniciar sesion"
@@ -78,6 +83,7 @@ ail<?xml version="1.0" encoding="utf-8"?>
         android:id="@+id/boton_recuperar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:backgroundTint="@color/naranja"
         android:text="Recuperar contraseña"
         app:layout_constraintBottom_toBottomOf="parent"
