--- a/app/src/main/res/layout/item_prenda.xml
+++ b/app/src/main/res/layout/item_prenda.xml
@@ -14,6 +14,7 @@
 
     <TextView
         android:layout_width="match_parent"
+        android:textColor="@color/black"
         android:layout_height="match_parent"
         android:gravity="center"
         tool:text="MODELO"
