--- a/app/src/main/res/layout/item_prenda.xml
+++ b/app/src/main/res/layout/item_prenda.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:textColor="@color/black"
         android:layout_height="match_parent"
+        android:textColorHint="@color/black"
         android:gravity="center"
         tool:text="MODELO"
         android:id="@+id/nombre_fila"
